<?xml version="1.0" encoding="utf-8"?>
<!-- Top-level content view for the layout fragment sample. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/frag_header"
        android:name="com.airbiquity.hap.FragAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout="@layout/frag_app_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/demo_mode"
        android:textSize="20dp" />

    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />    

    <!-- Manage My Apps -->
    <Button
        android:id="@+id/btnMangeApps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/manage_my_apps" />

    <!--  -->
    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
        
    <!-- Create Account -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/acc_create_why"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btnCreateAcc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/acc_create" />
    
    
    <!-- Footer -->
    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
    
</LinearLayout>
