<?xml version="1.0" encoding="utf-8"?>
<!-- Top-level content view for the layout fragment sample. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/AreYouOwner"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Yes & No buttons -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnNo"
            style="@style/BtnShort"
            android:layout_weight="1"
            android:onClick="btnNo"
            android:text="@string/no" />

        <Button
            android:id="@+id/btnYes"
            style="@style/BtnShort"
            android:layout_weight="1"
            android:onClick="btnYes"
            android:text="@string/yes" />

    </LinearLayout>
    
</RelativeLayout>