<?xml version="1.0" encoding="utf-8"?>
<!-- Top-level content view for the layout fragment sample. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/frag_header"
        android:name="com.airbiquity.hap.FragAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout="@layout/frag_app_header"/>

<!--     <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />     -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="12dp"
        android:text="@string/welcome_to_nissan_connect"
        android:textSize="20dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:text="@string/please_watch_video"
        />
    
    <!-- Watch Demo Video -->
    <Button
        android:id="@+id/btnWatchDemoVideo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/watch_demo_video" />

    <!-- Footer -->
    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
    
</LinearLayout>