<?xml version="1.0" encoding="utf-8"?>
<!-- Top-level content view for the layout fragment sample. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/frag_header"
        android:name="com.airbiquity.hap.FragAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout="@layout/frag_app_header"/>

    <!-- Main Layout -->
    <LinearLayout
        android:id="@+id/v_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">    

    
        <!-- Email/ID and password -->
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
    
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_or_id" >
            <requestFocus />
        </EditText>
    
        <EditText
            android:id="@+id/editPswrd1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:hint="@string/pas1"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/editPswrd2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:hint="@string/pas1"
            android:inputType="textPassword"
            />

        <!-- Save -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/save" />
                
        <!-- Cancel -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/cancel" />
        
        <!-- Delete Account -->
        <Button
            android:id="@+id/btnAccDel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/acc_del" />
        
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
    
    
    </LinearLayout>
    
    <!-- Progress layout -->
    <RelativeLayout
        android:id="@+id/v_progress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+android:id/progress_large"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </RelativeLayout>
    
    <!-- Error layout -->
    <LinearLayout
        android:id="@+id/v_error"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/err_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>
    
    <!-- Footer -->
    
</LinearLayout>
